update more inputs to use themeable variables

--- a/src/gui/scss/Obsidian.scss
+++ b/src/gui/scss/Obsidian.scss
@@ -141,6 +141,8 @@ $variable-menu-bg: #18191b;
 /* controls */
 $primary-button-bg: #16809c;
 $primary-button-hover-bg: #1f849e;
+$link-button-color: #12d0ff;
+$link-button-hover-color: #11add4;
 
 // Import Core Styles
 @import './core/$importer';
