--- a/src/gui/scss/Obsidian.scss
+++ b/src/gui/scss/Obsidian.scss
@@ -138,5 +138,11 @@ $variable-category-bg: #202124;
 $variable-magic-tooltip-fg: white;
 $variable-menu-bg: #18191b;
 
+/* controls */
+$primary-button-bg: #16809c;
+$primary-button-hover-bg: #1f849e;
+$link-button-color: #12d0ff;
+$link-button-hover-color: #11add4;
+
 // Import Core Styles
 @import './core/$importer';
