--- a/src/gui/scss/core/_bootstrap-overrides.scss
+++ b/src/gui/scss/core/_bootstrap-overrides.scss
@@ -186,11 +186,19 @@
 }
 
 .btn-primary {
-    background-color: #16809c;
+    background-color: $primary-button-bg;
     border-color: transparent;
     &:hover {
-        background-color: #1f849e;
+        background-color: $primary-button-hover-bg;
     }
+    &:active, &:focus {
+        background-color: $primary-button-bg !important;
+    }
+}
+
+.btn-primary[disabled]:hover {
+    background-color: $primary-button-bg;
+    opacity: 0.75;
 }
 
 .btn-default {
@@ -250,9 +258,9 @@
 }
 
 .btn-link {
-    color: #12d0ff;
+    color: $link-button-color;
     &:hover, &:focus {
-        color: #11add4;
+        color: $link-button-hover-color;
     }
 }
 
@@ -454,6 +462,10 @@
     }
 }
 
+.form-control:focus {
+    border-color: lighten($primary-button-bg, 25%);
+}
+
 .input-group .form-control:focus {
     z-index: 0;
 }
@@ -600,7 +612,7 @@ label {
   }
 
 a {
-    color: #41a7ff;
+    color: $link-button-color;
     &:hover {
         opacity: 0.8;
     }
