--- a/src/gui/app/templates/viewers/_viewers.html
+++ b/src/gui/app/templates/viewers/_viewers.html
@@ -5,6 +5,9 @@
     <button ng-click="showImportViewersModal()" class="btn btn-primary ml-2">
         <i class="fas fa-cloud-download-alt mr-2"></i> Import Viewers
     </button>
+    <button ng-click="showPurgeViewersModal()" class="btn btn-danger ml-2">
+        <i class="fas fa-trash-alt mr-2"></i> Purge Viewers
+    </button>
     <div class="flex justify-between" style="margin-left: auto;">
         <searchbar placeholder-text="Search Firebot viewers..." query="viewerSearch" style="flex-basis: 250px"></searchbar>
         <button ng-click="showViewerSearchModal();" class="btn btn-default" style="margin-left: 15px;"><i class="far fa-search"></i> Search Twitch</button>
