--- a/src/gui/app/templates/viewers/_viewers.html
+++ b/src/gui/app/templates/viewers/_viewers.html
@@ -17,14 +17,14 @@
             <ul class="dropdown-menu right-justified-dropdown" uib-dropdown-menu>
                 <li ng-click="showImportViewersModal()">
                     <a>
-                        <i class="fas fa-cloud-download-alt mr-4" aria-label="Import Viewers"></i>
-                        Import Viewers
+                        <i class="fas fa-cloud-download-alt mr-4 text-center" style="width: 20px;" aria-label="Import Viewers"></i>
+                        Import Viewers...
                     </a>
                 </li>
                 <li ng-click="showPurgeViewersModal()">
                     <a style="color: #fb7373;">
-                        <i class="far fa-trash-alt mr-6" aria-label="Purge Viewers"></i>
-                        Purge Viewers
+                        <i class="far fa-trash-alt mr-4 text-center" style="width: 20px;" aria-label="Purge Viewers"></i>
+                        Purge Viewers...
                     </a>
                 </li>
             </ul>
