chore(activity-feed): edit event modal minor tweaks

--- a/src/gui/app/templates/chat/_chat-messages.html
+++ b/src/gui/app/templates/chat/_chat-messages.html
@@ -201,7 +201,7 @@
           uib-dropdown-toggle
           class="clickable"
           style="color: white; font-size: 20px; line-height: 1"
-          aria-label="Activity feed options"
+          aria-label="Activity Feed options"
         >
           <i class="far fa-ellipsis-v"></i>
         </a>
