chore: tweak dashboard settings button

--- a/src/gui/app/templates/chat/_chat-messages.html
+++ b/src/gui/app/templates/chat/_chat-messages.html
@@ -297,7 +297,8 @@
       type="primary"
       icon="fas fa-cog"
       ng-click="showChatSettingsModal()"
-      title="Dashboard Settings"
+      tooltip="Dashboard Settings"
+      tooltip-placement="left"
       aria-label="Dashboard Settings"
     />
   </div>
