feat(roles): add option to view viewers in a Twitch role
commit cf89c6672f2dec07b1b41813413fcd63207e7917
Merge: b38c4ede7 82ada9163
Author: CaveMobster <cavemobster@gmail.com>
Date:   Thu Nov 6 20:13:45 2025 +0100

    Merge branch 'v5' into view-viewers-in-twitch-role

commit b38c4ede73eb54fd8450108b6c885a5475e3be81
Author: CaveMobster <cavemobster@gmail.com>
Date:   Thu Nov 6 19:53:35 2025 +0100

    Add warning messages when adding and removing mods and vips

commit 73497a0a3f2a88db33b0aebdf639f64f56632656
Author: CaveMobster <cavemobster@gmail.com>
Date:   Thu Nov 6 17:31:42 2025 +0100

    Update the text beneath the role title

commit c71f83a67439c0459180a9eee972df45d73e64b0
Author: CaveMobster <cavemobster@gmail.com>
Date:   Thu Nov 6 14:39:16 2025 +0100

    Add role count to roles tab

commit 41931c0b2b9d2901721fd65daa5a799197b39328
Merge: 0e5dd20de 40fb46660
Author: CaveMobster <cavemobster@gmail.com>
Date:   Thu Nov 6 14:06:56 2025 +0100

    Merge branch 'v5' into view-viewers-in-twitch-role

commit 0e5dd20de7cc0968f04f15f9ac84032403ecda3d
Author: CaveMobster <cavemobster@gmail.com>
Date:   Thu Nov 6 14:06:39 2025 +0100

    Add mod and vip role updating

commit d0754b2bd470cd498271ce0fdf1782f05a53aa1a
Author: CaveMobster <cavemobster@gmail.com>
Date:   Thu Nov 6 13:13:19 2025 +0100

    Update the chat roles manager for the sub role

commit 577be2d406db24ed199b89f0a738094c0f93bed9
Author: CaveMobster <cavemobster@gmail.com>
Date:   Thu Nov 6 12:18:58 2025 +0100

    Add sub tiers

commit 2f860f09d4ae6650f2d028cec376729e9dd2b2cc
Author: CaveMobster <cavemobster@gmail.com>
Date:   Thu Nov 6 11:59:36 2025 +0100

    Update styling

commit 23c75786c5ff3c8df6e50d665db018efce4b4b0f
Author: CaveMobster <cavemobster@gmail.com>
Date:   Thu Nov 6 00:14:27 2025 +0100

    Add subscribers

commit 1c1d602c008ca1ec52967ddea8f89124c9a0436b
Merge: feff47354 cb58c98d6
Author: CaveMobster <cavemobster@gmail.com>
Date:   Thu Nov 6 00:12:15 2025 +0100

    Merge branch 'su

--- a/src/gui/app/templates/_roles-and-ranks.html
+++ b/src/gui/app/templates/_roles-and-ranks.html
@@ -50,14 +50,16 @@
         </div>
         
         <h3 class="mt-12" style="text-transform: uppercase;font-weight: 200;font-size: 19px;">Twitch Roles</h3>
-        <p class="muted">These roles are predefined by Twitch and cannot be edited.</p>
+        <p class="muted">These roles are predefined by Twitch and cannot be renamed or deleted.</p>
         <div class="new-tile-grid" style="width: 100%">
             <div ng-repeat="role in viewerRolesService.getTwitchRoles() track by $index" class="new-tile gray centered">
+                <div class="view-btn" ng-click="showViewTwitchRoleModal(role)"></div>
                 <div class="content row">
                     <div class="detail-wrapper nomargin">
                         <div class="detail" style="font-size: 1.6em;">
                             {{role.name}}
                         </div>
+                        <div class="detail-description mt-2"><i class="fal fa-user"></i> {{viewerRolesService.getViewersForTwitchRole(role.id).length}}</div>
                     </div>
                 </div>
             </div>
