feat(viewers): Add an option to export viewer data
commit 9473a5e480206fb6d747ea331c7ce667852f498e
Author: CaveMobster <cavemobster@gmail.com>
Date:   Sat Nov 8 23:45:14 2025 +0100

    More cleaning up

commit 847988e7c9725ad0b8db607580517f275e8aa344
Author: CaveMobster <cavemobster@gmail.com>
Date:   Sat Nov 8 23:44:31 2025 +0100

    Clean up files

commit f42613bdf9232652ac2f067d6f91af30c3f69356
Author: CaveMobster <cavemobster@gmail.com>
Date:   Sat Nov 8 23:41:32 2025 +0100

    Add currency and rank export options

commit 379a1258ddf31356a73a72f63a0bde02ca4a3338
Merge: 93402fc4c 09433d2a2
Author: CaveMobster <cavemobster@gmail.com>
Date:   Sat Nov 8 18:30:24 2025 +0100

    Merge branch 'v5' into viewer-export

commit 93402fc4c06f9b41e74960d1186cf9aaa564329e
Author: CaveMobster <cavemobster@gmail.com>
Date:   Fri Nov 7 13:12:22 2025 +0100

    Add strict equality

commit 8052a2245b8cf41c1a5970c7479678c764010725
Merge: a53883f30 c06e46af5
Author: CaveMobster <cavemobster@gmail.com>
Date:   Fri Nov 7 09:08:25 2025 +0100

    Merge branch 'v5' into viewer-export

commit a53883f30c37683c373af099e10897c53a1e016f
Author: CaveMobster <cavemobster@gmail.com>
Date:   Fri Nov 7 00:33:27 2025 +0100

    Add a viewer exporter

--- a/src/gui/app/templates/viewers/_viewers.html
+++ b/src/gui/app/templates/viewers/_viewers.html
@@ -22,6 +22,12 @@
                             Import Viewers...
                         </a>
                     </li>
+                    <li ng-click="showExportViewersModal()">
+                        <a>
+                            <i class="fas fa-file-export mr-4 text-center" style="width: 20px;" aria-label="Export Viewers"></i>
+                            Export Viewers...
+                        </a>
+                    </li>
                     <li ng-click="showPurgeViewersModal()">
                         <a style="color: #fb7373;">
                             <i class="far fa-trash-alt mr-4 text-center" style="width: 20px;" aria-label="Purge Viewers"></i>
