--- a/src/gui/scss/core/_bootstrap-overrides.scss
+++ b/src/gui/scss/core/_bootstrap-overrides.scss
@@ -20,13 +20,14 @@
     }
 }
 
-.modal-header.sticky-header, .sticky-element {
+.modal-header.sticky-header,
+.sticky-element {
     position: sticky;
     background-color: $light-background-color;
     z-index: 999;
     top: 22px;
     &.is-stuck {
-        border-bottom: 1px solid #24262A;
+        border-bottom: 1px solid #24262a;
         margin-bottom: 10px;
         box-shadow: 0 6px 9px -2px #0000004d;
     }
@@ -43,14 +44,15 @@
         z-index: 999;
         background-color: $light-background-color;
         &.is-stuck {
-            border-top: 1px solid #24262A;
+            border-top: 1px solid #24262a;
             margin-top: 10px;
             box-shadow: 0 -6px 9px -2px #0000004d;
         }
     }
 }
 
-.effect-footer-sentinel, .fb-scroll-sentinel {
+.effect-footer-sentinel,
+.fb-scroll-sentinel {
     width: 100%;
 }
 
@@ -70,13 +72,16 @@
     outline: none;
 }
 
-
 .modal-sm {
     width: 400px;
 }
 
 .modal-md {
     width: 500px;
+}
+
+.modal-mdlg {
+    width: 700px;
 }
 
 .modal-body {
@@ -113,7 +118,9 @@
     border-bottom: 1px solid #b1b1b1;
 }
 
-.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
+.nav-tabs > li.active > a,
+.nav-tabs > li.active > a:focus,
+.nav-tabs > li.active > a:hover {
     color: #ffffff;
     background-color: transparent;
     border: 1px solid transparent;
@@ -124,12 +131,13 @@
     color: #c5c5c5;
 }
 
-.nav>li>a:focus, .nav>li>a:hover {
+.nav > li > a:focus,
+.nav > li > a:hover {
     text-decoration: none;
     background-color: transparent;
 }
 
-.nav-tabs>li>a:hover {
+.nav-tabs > li > a:hover {
     border-color: transparent;
     border-bottom: 1px solid #e4e4e4;
 }
@@ -143,7 +151,7 @@
 .btn {
     border-radius: 8px;
     padding: 9px 12px;
-    transform: scale(1.0) translateZ(0);
+    transform: scale(1) translateZ(0);
     transition-property: transform;
     transition-duration: 0.3s;
     &.btn-lg {
@@ -160,10 +168,10 @@
         font-size: 12px !important;
         line-height: 1.5 !important;
     }
-
 }
 
-.btn.dropdown-toggle, .btn.form-control {
+.btn.dropdown-toggle,
+.btn.form-control {
     &:hover {
         transform: none;
     }
@@ -189,7 +197,8 @@
     &:hover {
         background-color: $primary-button-hover-bg;
     }
-    &:active, &:focus {
+    &:active,
+    &:focus {
         background-color: $primary-button-bg !important;
     }
 }
@@ -211,7 +220,7 @@
             background-color: $default-btn-bg-color;
             color: $default-btn-text-color;
             opacity: 0.75;
-        };
+        }
     }
     &:hover {
         background-color: $default-btn-hover-bg;
@@ -219,25 +228,44 @@
     }
 }
 
-.btn-default.active.focus, .btn-default.active:focus, .btn-default.active:hover, .btn-default:active.focus, .btn-default:active:focus, .btn-default:active:hover, .open>.dropdown-toggle.btn-default.focus, .open>.dropdown-toggle.btn-default:focus, .open>.dropdown-toggle.btn-default:hover {
+.btn-default.active.focus,
+.btn-default.active:focus,
+.btn-default.active:hover,
+.btn-default:active.focus,
+.btn-default:active:focus,
+.btn-default:active:hover,
+.open > .dropdown-toggle.btn-default.focus,
+.open > .dropdown-toggle.btn-default:focus,
+.open > .dropdown-toggle.btn-default:hover {
     color: $default-btn-text-color;
     background-color: $default-btn-hover-bg;
 }
 
-.btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus {
+.btn.active.focus,
+.btn.active:focus,
+.btn.focus,
+.btn:active.focus,
+.btn:active:focus,
+.btn:focus {
     outline: 5px auto lightgray;
     outline-offset: -2px;
 }
 
-.btn.active, .btn:active {
+.btn.active,
+.btn:active {
     box-shadow: none;
 }
 
-.btn-danger, .btn-primary, .btn-success, .btn-secondary {
+.btn-danger,
+.btn-primary,
+.btn-success,
+.btn-secondary {
     padding: 9px 12px;
 }
 
-.btn-default.active, .btn-default:active, .open>.dropdown-toggle.btn-default {
+.btn-default.active,
+.btn-default:active,
+.open > .dropdown-toggle.btn-default {
     color: $default-btn-text-color;
     background-color: $default-btn-hover-bg;
     border-color: transparent;
@@ -247,7 +275,12 @@
     margin-left: 5px;
 }
 
-.btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus {
+.btn.active.focus,
+.btn.active:focus,
+.btn.focus,
+.btn:active.focus,
+.btn:active:focus,
+.btn:focus {
     outline: none;
     outline-offset: 0;
     border-color: transparent;
@@ -255,7 +288,8 @@
 
 .btn-link {
     color: $link-button-color;
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
         color: $link-button-hover-color;
     }
 }
@@ -265,7 +299,8 @@
 .table-hover > tbody > tr:hover {
     background-color: $light-background-color;
 }
-.control-list:hover>td, .command-list:hover>td {
+.control-list:hover > td,
+.command-list:hover > td {
     color: $content-text-color;
 }
 
@@ -348,9 +383,10 @@
     }
 }
 
-.dropdown-menu>li>a {
+.dropdown-menu > li > a {
     color: $dropdown-menu-text;
-    &:focus, &:hover {
+    &:focus,
+    &:hover {
         color: $dropdown-menu-text;
         background-color: adjust-color($dropdown-menu-bg, $red: -15, $green: -15, $blue: -15);
     }
@@ -364,17 +400,19 @@
     color: $muted-text-color;
 }
 
-.ui-select-bootstrap .ui-select-choices-row>span {
+.ui-select-bootstrap .ui-select-choices-row > span {
     color: $dropdown-menu-text;
 }
 
-.ui-select-bootstrap .ui-select-choices-row>span:hover, .ui-select-bootstrap .ui-select-choices-row>span:focus {
+.ui-select-bootstrap .ui-select-choices-row > span:hover,
+.ui-select-bootstrap .ui-select-choices-row > span:focus {
     text-decoration: none;
     color: $dropdown-menu-text;
     background-color: adjust-color($dropdown-menu-bg, $red: -15, $green: -15, $blue: -15);
 }
 
-.ui-select-bootstrap > .ui-select-choices, .ui-select-bootstrap > .ui-select-no-choice {
+.ui-select-bootstrap > .ui-select-choices,
+.ui-select-bootstrap > .ui-select-no-choice {
     max-height: 332px;
 }
 
@@ -382,7 +420,6 @@
     padding: 5px 0px;
     white-space: unset;
 }
-
 
 // Form Control
 .input-group-addon {
@@ -466,7 +503,9 @@
     z-index: 0;
 }
 
-.form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
+.form-control[disabled],
+.form-control[readonly],
+fieldset[disabled] .form-control {
     background-color: $form-control-bg;
     opacity: 0.75;
 }
@@ -496,7 +535,6 @@ textarea.form-control {
     line-height: 30px;
     text-wrap: nowrap;
 }
-
 
 label {
     font-size: 15px;
@@ -542,9 +580,9 @@ label {
     flex-direction: column;
     justify-content: flex-end;
     border-bottom: 1px solid $fb-tab-wrapper-border-color;
-  }
+}
 
-  .fb-center-tabs {
+.fb-center-tabs {
     font-weight: 600;
     font-size: 12px;
     display: flex;
@@ -557,7 +595,7 @@ label {
             cursor: pointer;
         }
         &.active {
-            &:hover{
+            &:hover {
                 color: $fb-tab-active-text-color;
                 cursor: default;
             }
@@ -572,31 +610,33 @@ label {
             width: 3px;
         }
     }
-  }
+}
 
-  .fb-tabs {
+.fb-tabs {
     margin: 0 10px;
     border-bottom: 0px solid #eaecec;
     font-weight: 600;
     font-size: 12px;
-    & > li.active > a, & > li.active > a:focus, & > li.active > a:hover {
-      color: $fb-tab-hightlight-color;
-      background-color: transparent;
-      border: 1px solid transparent;
-      border-bottom: 3px solid $fb-tab-hightlight-color;
-      &.nounderline {
-        border-bottom: 0;
-        border: 0;
-      }
+    & > li.active > a,
+    & > li.active > a:focus,
+    & > li.active > a:hover {
+        color: $fb-tab-hightlight-color;
+        background-color: transparent;
+        border: 1px solid transparent;
+        border-bottom: 3px solid $fb-tab-hightlight-color;
+        &.nounderline {
+            border-bottom: 0;
+            border: 0;
+        }
     }
     & > li > a:hover {
-      border-color: transparent;
-      border-bottom: 3px solid $fb-tab-border-bottom-hover;
-      color:  $fb-tab-border-bottom-hover;
-      &.nounderline {
-        border-bottom: 0;
-        border: 0;
-      }
+        border-color: transparent;
+        border-bottom: 3px solid $fb-tab-border-bottom-hover;
+        color: $fb-tab-border-bottom-hover;
+        &.nounderline {
+            border-bottom: 0;
+            border: 0;
+        }
     }
     & > li > a {
         margin-right: 2px;
@@ -605,7 +645,7 @@ label {
         border-radius: 4px 4px 0 0;
         color: $fb-unselected-text-color;
     }
-  }
+}
 
 a {
     color: $link-button-color;
@@ -628,7 +668,7 @@ a {
 }
 
 // This is for pages that do NOT use tabbed navigation. IE: Live Events
-.fb-notab-header-wrapper{
+.fb-notab-header-wrapper {
     height: 55px;
     background: $fb-tab-wrapper-bg;
     display: flex;
@@ -636,9 +676,9 @@ a {
     flex-shrink: 0;
     border-bottom: 1px solid $fb-tab-wrapper-border-color;
 
-    .fb-notab-title{
+    .fb-notab-title {
         margin: 0 10px;
-        padding:10px 15px;
+        padding: 10px 15px;
         border-bottom: 0px solid #eaecec;
         font-weight: 600;
         font-size: 12px;
@@ -648,9 +688,9 @@ a {
         text-transform: uppercase;
     }
 
-    .fb-notab-dropdown .noselect{
+    .fb-notab-dropdown .noselect {
         margin: 0 10px;
-        padding:10px 15px;
+        padding: 10px 15px;
         border-bottom: 0px solid #eaecec;
         font-weight: 600;
         font-size: 12px;
@@ -663,7 +703,7 @@ a {
         &.project-dropdown-text {
             color: $project-dropdown-text-color;
             font-size: 14px;
-            font-family: 'Quicksand';
+            font-family: "Quicksand";
             border: 0px;
             border-bottom: 0px;
         }
@@ -675,8 +715,8 @@ a {
     user-select: none;
 }
 
-
-.glyphicon.glyphicon-chevron-left, .glyphicon.glyphicon-chevron-right {
+.glyphicon.glyphicon-chevron-left,
+.glyphicon.glyphicon-chevron-right {
     vertical-align: -0%;
     font-family: "Font Awesome 5 Pro";
     font-weight: 900;
@@ -697,28 +737,42 @@ a {
 }
 
 /* pagination */
-.pagination > .disabled > a, .pagination > .disabled > a:focus, .pagination > .disabled > a:hover, .pagination > .disabled > span, .pagination > .disabled > span:focus, .pagination > .disabled > span:hover {
+.pagination > .disabled > a,
+.pagination > .disabled > a:focus,
+.pagination > .disabled > a:hover,
+.pagination > .disabled > span,
+.pagination > .disabled > span:focus,
+.pagination > .disabled > span:hover {
     color: #b9b9b9;
-    background-color: #68696C;
-    border-color: #2F3136;
+    background-color: #68696c;
+    border-color: #2f3136;
 }
 
-.pagination > .active > a, .pagination > .active > a:focus, .pagination > .active > a:hover, .pagination > .active > span, .pagination > .active > span:focus, .pagination > .active > span:hover {
+.pagination > .active > a,
+.pagination > .active > a:focus,
+.pagination > .active > a:hover,
+.pagination > .active > span,
+.pagination > .active > span:focus,
+.pagination > .active > span:hover {
     color: #fff;
     background-color: #337ab7;
-    border-color: #2F3136;
+    border-color: #2f3136;
 }
 
-.pagination > li > a, .pagination > li > span {
+.pagination > li > a,
+.pagination > li > span {
     color: #ffffff;
-    background-color: #68696C;
-    border: 1px solid #2F3136;
+    background-color: #68696c;
+    border: 1px solid #2f3136;
 }
 
-.pagination > li > a:focus, .pagination > li > a:hover, .pagination > li > span:focus, .pagination > li > span:hover {
+.pagination > li > a:focus,
+.pagination > li > a:hover,
+.pagination > li > span:focus,
+.pagination > li > span:hover {
     color: white;
     background-color: #888888;
-    border-color: #2F3136;
+    border-color: #2f3136;
 }
 
 .list-group-item {
