feat(chat): gigantify emote in chat feed

--- a/src/gui/scss/core/_chat.scss
+++ b/src/gui/scss/core/_chat.scss
@@ -248,6 +248,13 @@
     }
 }
 
+.gigantify {
+    display: block !important;
+    & .chatEmoticon {
+        height: 8rem !important;
+    }
+}
+
 .chat-username {
     display: flex;
     font-weight: bold;
