color effect icons

--- a/src/gui/scss/core/_controls.scss
+++ b/src/gui/scss/core/_controls.scss
@@ -848,7 +848,7 @@ table.fb-table-alt {
             align-items: center;
             justify-content: center;
             color: #888888;
-            cursor: grab;
+            cursor: move;
             flex-shrink: 0;
             margin-right: 10px;
         }
